more changes to form and fixed graph page

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -74,8 +74,8 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12"> 
                     <div class="form-group">
-                        <label for="projectID">Project ID</label>
-                        <input type="text" maxlength="20" class="form-control" id="projectID" placeholder="Enter Project ID">
+                        <label for="username">User ID</label>
+                        <input type="text" maxlength="50" class="form-control" id="username" placeholder="your_email_address@email.ca">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12"> 
@@ -305,7 +305,7 @@
     
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
-                        <label for="watershed">Watershed Name</label>
+                        <label for="watershed">Watershed Name  (optional)</label>
                         <input type="text" class="form-control optional" id="watershed" placeholder="Enter Watershed Name">
                     </div>
                 </div> 
@@ -314,7 +314,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label for="localwcname">Local Watercourse Name</label>
+                        <label for="localwcname">Local Watercourse Name (optional)</label>
                         <input type="text" maxlength="100" id="localwcname" class="form-control optional">
                     </div>
                 </div>
@@ -377,7 +377,7 @@
                         <!--Initially hidden component-->
                         <div id="ifYesPriv" style="display: none; padding-left: 20px;">
                             <label for="privateundertaking">Name of Organization</label>
-                            <input type="text" id="privateundertakingname" name="privateundertaking" class="form-control">
+                            <input type="text" id="privateundertakingname" name="privateundertaking" class="optional form-control">
                         </div>
                     </div> 
                 </div> 
@@ -394,9 +394,9 @@
                             <option value="no" selected>No</option>
                         </select>
                         <!--Initially hidden component-->
-                        <div id="ifYesOther" style="display: none; padding-left: 20px;">
+                        <div id="ifYesOther" class="optional" style="display: none; padding-left: 20px;">
                             <label for="otherundertaking">Name of Organization</label>
-                            <input type="text" id="otherundertakingname" name="otherundertaking" class="form-control">
+                            <input type="text" id="otherundertakingname" name="otherundertaking" class="optional form-control">
                         </div>
                     </div> 
                 </div> 
@@ -1275,20 +1275,56 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12">
+            <label for="elevsource">
+                Elevation Source
+            </label>
+            <div class="row checkboxes" id="elevsource">
+                <div class="col-lg-4 col-md-12 col-sm-12">             
                     <div class="form-group">
-                        <label for="elevsource">Elevation Source</label>
-                        <select class="browser-default custom-select" id="elevsource">
-                            <option value="" disabled selected>----</option>
-                            <option>Ground Survey - GPS</option>
-                            <option>Ground Survey - Total Station</option>
-                            <option>Leveling</option>
-                            <option>Base Elevation</option>
-                            <option>Other</option>
-                        </select>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="gps" id="gps">
+                            <label class="form-check-label" for="gps">
+                                Ground Survey - GPS
+                            </label>
+                        </div>
+    
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="totalStation" id="totalStation">
+                            <label class="form-check-label" for="totalStation">
+                                Ground Survey - Total Station
+                            </label>
+                        </div> 
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="leveling" id="leveling">
+                            <label class="form-check-label" for="leveling">
+                                Leveling
+                            </label>
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="baseElev" id="baseElev">
+                            <label class="form-check-label" for="baseElev">
+                                Base Elevation
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="otherElevation" id="otherElevation">
+                            <label class="form-check-label" for="otherElevation">
+                                Other
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         <label for="hydrapeerreview">Peer Reviewed</label>
@@ -1395,7 +1431,7 @@
 
     <div class="help-links" style="display:none">
 
-        <p id="projectIDh">Used as a unique identifier to link the projects to a spatial database.</p>
+        <p id="usernameh">Enter your organization email address: e.g: joe.smith@conservationarea.ca</p>
 
         <p id="projectNameh">Unique name given to each project.</p>
 
