--- a/webform-expressapp/views/selectionpage.html
+++ b/webform-expressapp/views/selectionpage.html
@@ -18,14 +18,45 @@
             
             <h3>About</h3>
             <p>
-                This form is intended to collect metatdata that describes the data, inputs, and models used to develop flood maps.  A flood map identifies the boundaries of a potential flood event based on type and likelihood, and can be used to help identify the specific impacts of a flood event on structures, people and assets.
-                There is a default page which stores information such as: location, number of kilometers mapped, funding sources, etc. These are required fields.
-                In addition, where available, users can select any of the options below to enter data regarding base data used in the modelling process:
+                The flood mapping metadata portal is an online database to (i) enter and (ii) query metadata related to flood hazard mapping.  This site was created by Natural Resources Canada in collaboration with Conservation Ontario.
+            </p>
+            <h3>Data Entry:</h3>
+            <p>
+                This form is intended to collect metadata that describes the data, inputs, and models used to develop flood maps. <br><br>
+
+The default data that is required includes details about the type of record (hazard, awareness, etc.), the project category (e.g.: watercourse, great lakes, coastal, etc.), name of water body, hazard events evaluated (e.g.: 100 yr, 20 yr, 5 yr, etc.). The spatial extent of the area mapped can be loaded multiple ways: via mouse-clicks or uploading a file of the flood line polygon or extent of mapped area.  <br><br>
+
+On the 2nd page, default required information includes: financial support, new/updated mapping, the area covered (e.g.: length of waterbody, maximum floodplain extent, etc.) and if a flood event has been recorded since 1996.
+In addition to the default data required, users may select any (or all) of the buttons below to add additional information they have available regarding the data used in the modelling process:
                 <ul>
-                    <li>Imagery Data - If you have any data on the horizontal/vertical reference of imagery data, or the deriviation method</li>
-                    <li>Elevation Data - If you have any data on the horizontal/vertical reference and format of elevation data</li>
-                    <li>Hydrology Data - If you have any data on the hydrology method, number of events modelled, etc</li>
-                    <li>Hydraulics Data - If you have any data on the hydraulic model, or calibration process used</li>
+                    <li>Imagery Data - For recording information on images used in the development of the flood map.
+                        <ul>
+                            <li>
+                                Data entry fields include: season of collection, acquisition year, horizontal and vertical reference datum, accuracy and spatial resolution.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Elevation Data - For recording information on elevation dataset(s) used in the development of the flood map.
+                        <ul>
+                            <li>
+                                Data entry fields include: data type (e.g.: LiDAR, GPS, phogrammetry, etc.), data format, acquisition year, horizontal and vertical reference datum, accuracy and spatial resolution.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Hydrology Data - Hydrology Data : For recording information on hydrology models and methods used.
+                        <ul>
+                            <li>
+                                Data entry fields include: hydrology method used, number of years in datasets, number of events modelled, quality of the input and calibration, if future model year events are modelled, climate change considerations, and whether snowmelt, peak volume reduction or catchments were discretized. 
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Hydraulics Data - For recording information on hydraulic model and calibration process used.
+                        <ul>
+                            <li>
+                                Data entry fields include: hydraulic modelling software used, model year used, flow conditions, quality of the input and calibration, whether the floodline was estimated, if the results have been peer reviewed and any general comments.
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </p>
 
