clarity changes to help menus

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -233,8 +233,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label for="extentmap">Extent</label>
-                        <p>Click on map to add a coordinate. Select or enter 2 coordinates or upload a SHP zip.</p>
+                        <label for="extentmap">Coordinates / Extent of Area for this Record:</label>
+                        <p>Add information about the <b> extent of the area </b>  covered by this record. </p>
                     </div>
                 </div>
             </div>
@@ -1445,7 +1445,7 @@
 
         <p id="floodHzdStdh">The regulatory zone and standard applied to a particular project.</p>
 
-        <p id="extentmaph">Enter or select the extent that was mapped. Enter coordinates, or select on the map, or upload a shapefile. </p>
+        <p id="extentmaph">You can enter the extent, using one of these methods: (i) clicking on the map (two diagonal corners), (ii) entering them into the text box, or (iii) uploading a shapefile of the extent. Alternatively, if you have a shapefile of the flood polygon, you can also load this file. (the application will automatically calculate the extent, and will store both the flood polygon and the extent. </p>
 
         <p id="officialWCNameh">The name of the primary watercourse or waterbody.</p>
 
