--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -234,7 +234,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label for="extentmap">Coordinates / Extent of Area for this Record:</label>
-                        <p>Add information about the <b> extent of the area </b>  covered by this record. </p>
+                        <p style="font-style: italic;">Add information about the <b> extent of the area </b>  covered by this record. </p>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label class="filelabel" for="shpfile">Upload a SHP file</label>
+                        <label class="filelabel" for="shpfile">Upload a SHP file (will except flood polygon or flood extent)</label>
                         <input type="file" class="form-control-file optional" id="shpfile">
                     </div>
                 </div>
