added docker files

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -271,7 +271,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label class="filelabel" for="shpfile">Upload a SHP file (will except flood polygon or flood extent)</label>
+                        <label class="filelabel" for="shpfile">Upload a SHP file (will accept flood polygon or flood extent)</label>
                         <input type="file" class="form-control-file optional" id="shpfile">
                     </div>
                 </div>
